[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
description = "Cosmo's 2022 Advent of Code solutions"
license = "MIT"
repository = "https://github.com/cosmobobak/aoc2022"
keywords = ["advent of code", "2022"]
categories = ["games"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
